<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/enterDataFragment">
    <fragment
        android:id="@+id/loginStatusFragment"
        android:name="com.example.simplefirestorevm.LoginStatusFragment"
        android:label="@string/loginstatus_fragment_label"
        tools:layout="@layout/fragment_loginstatus" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.simplefirestorevm.SignInFragment"
        android:label="@string/signin_fragment_label"
        tools:layout="@layout/fragment_signin" />
    <fragment
        android:id="@+id/enterDataFragment"
        android:name="com.example.simplefirestorevm.EnterDataFragment"
        android:label="@string/enter_data_fragment_label"
        tools:layout="@layout/fragment_enter_data" />
    <fragment
        android:id="@+id/filterDataFragment"
        android:name="com.example.simplefirestorevm.FilterDataFragment"
        android:label="@string/filter_data_fragment_label"
        tools:layout="@layout/fragment_filter_data" />
</navigation>